<resources>
    <string name="app_name">HeartRateMonitorMobile</string>

    <!-- Login -->
    <string name="id">아이디</string>
    <string name="pass_word">비밀번호</string>
    <string name="login">로그인</string>
    <string name="biometric_login">생체 로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="divider_login_sign_up">또는</string>

    <!-- Sign Up -->
    <string name="id_hint">아이디( 4~12 글자의 영문, 숫자 조합 )</string>
    <string name="pass_word_hint">비밀번호( 최소 8글자 이상의 영문, 숫자, 특수문자 조합 )</string>
    <string name="check_password_hint">비밀번호 확인</string>
    <string name="name_hint">이름</string>
    <string name="phone_number_hint">전화번호\( \'-\' 빼고 입력 ex. 01012345678 )</string>
    <string name="birth_hint">생년월일\( ex. 2000\-01\-01 )</string>
    <string name="height_hint">신장( cm )</string>
    <string name="weight_hint">체중( kg )</string>
    <string name="double_check">중복 확인</string>
    <string name="gender">성별</string>
    <string name="gender_male">남자</string>
    <string name="gender_female">여자</string>
    <string name="service_term">(필수) Heart Rate Monitor 서비스 이용 약관 동의</string>
    <string name="privacy_term">(선택) 개인정보 수집 동의</string>
    <string name="show_term_detail">[보기]</string>

    <!-- Home -->
    <string name="tab_name_my_page">마이페이지</string>
    <string name="timeout_message">요청 시간이 초과되었습니다.</string>
    <string name="service_error_message">데이터 요청에 실패하였습니다.</string>
    <string name="date_filter_place_holder_text">전체 기간</string>

    <!-- Urgent -->
    <string name="name_urgent">현재</string>
    <string name="no_action_report">미처리된 신고</string>
    <string name="working">근무중</string>

    <!-- Report -->
    <string name="name_report">신고 이력</string>
    <string name="all_id">전체 아이디</string>
    <string name="search">검색</string>
    <string name="filter_report_date">조회 기간</string>
    <string name="last_heart_rate">최근 심박수</string>
    <string name="today_report">오늘 신고</string>

        <!-- Report Detail -->
        <string name="name_report_detail">신고 상세</string>
        <string name="action_emergency">응급 조치</string>
        <string name="action_rest">즉시 휴식</string>
        <string name="action_work">작업 재개</string>
        <string name="day_heart_rate">당일 심박수</string>
        <string name="action_record">조치 이력</string>
        <string name="report_location">신고 위치</string>
        <string name="average_heart_rate">평균 심박수</string>
        <string name="max_heart_rate">최대 심박수</string>

    <!-- User -->
    <string name="name_user">전체 회원</string>
    <string name="filter_work_date">근무 기간</string>

        <!-- User Detail -->
        <string name="name_user_detail">회원 상세</string>
        <string name="name_worker_detail">마이페이지</string>
        <string name="user_summary_sub_title_1">임계치</string>
        <string name="user_summary_sub_title_2">성별/나이</string>
        <string name="user_summary_sub_title_3">신장/체중</string>
        <string name="user_summary_sub_title_4">아이디</string>
        <string name="user_summary_sub_title_5">전화번호</string>
        <string name="set_heart_rate_threshold">수정하기</string>
</resources>