<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    tools:context=".view.screen.UserDetailActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:contentInsetStart="@dimen/margin_padding_default"
        android:contentInsetEnd="@dimen/margin_padding_default"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/ic_back"
            android:clickable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name_user_detail"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_title"/>
    </Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/svUserDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/margin_padding_default"
                    android:paddingVertical="@dimen/margin_padding_small"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_padding_small"
                        android:textSize="@dimen/text_item_title"
                        android:textStyle="bold"
                        tools:text="Name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:text="@string/user_summary_sub_title_1"
                            android:textColor="@color/text_sub"/>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.75">

                            <TextView
                                android:id="@+id/txtThreshold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="threshold"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                            <TextView
                                android:id="@+id/btnSetThreshold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:text="@string/set_heart_rate_threshold"
                                android:textColor="@color/blue"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_padding_smallest"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:text="@string/user_summary_sub_title_2"
                            android:textColor="@color/text_sub"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.75"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtAge"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="age"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="@dimen/margin_padding_smallest"
                                android:text="/" />

                            <TextView
                                android:id="@+id/txtGender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="gender"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_padding_smallest"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:text="@string/user_summary_sub_title_3"
                            android:textColor="@color/text_sub"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.75"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtHeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="height"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="@dimen/margin_padding_smallest"
                                android:text="/" />

                            <TextView
                                android:id="@+id/txtWeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="weight"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_padding_smallest"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:text="@string/user_summary_sub_title_4"
                            android:textColor="@color/text_sub"/>

                        <TextView
                            android:id="@+id/txtId"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.75"
                            tools:text="age"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_padding_smallest"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:text="@string/user_summary_sub_title_5"
                            android:textColor="@color/text_sub"/>

                        <TextView
                            android:id="@+id/txtPhoneNumber"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.75"
                            tools:text="age"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_padding_small"
                    android:text="@string/day_heart_rate"
                    android:textColor="@color/text_sub"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/margin_padding_small"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_padding_small"
                        android:layout_marginBottom="@dimen/margin_padding_small"
                        android:padding="@dimen/margin_padding_smallest"
                        android:background="@color/light_grey"
                        tools:text="setHeartRateDate"
                        android:clickable="true"/>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chartDayHeartRate"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_padding_default">

                        <LinearLayout
                            android:id="@+id/llAvgHeartRate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_horizontal"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/llMaxHeartRate">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/average_heart_rate"
                                android:textColor="@color/text_sub"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/txtAvgHeartRate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="average"
                                android:textSize="@dimen/text_item_title"
                                android:textStyle="bold"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llMaxHeartRate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_horizontal"
                            app:layout_constraintStart_toEndOf="@+id/llAvgHeartRate"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/average_heart_rate"
                                android:textColor="@color/text_sub"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/txtMaxHeartRate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="max"
                                android:textSize="@dimen/text_item_title"
                                android:textStyle="bold"/>

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pgbSearchRoute"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:indicatorColor="@color/grey"
            app:trackColor="@color/light_grey"
            android:indeterminate="true"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/llTimeout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeout_message"
                android:textColor="@color/grey"/>

            <ImageButton
                android:id="@+id/btnTimeoutRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_default"
                android:src="@drawable/ic_request"
                android:background="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llServiceError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_error_message"
                android:textColor="@color/grey" />

            <ImageButton
                android:id="@+id/btnServiceErrorRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_default"
                android:src="@drawable/ic_request"
                android:background="@color/white"/>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>