<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_grey"
    tools:context=".view.screen.UrgentFragment">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:contentInsetStart="@dimen/margin_padding_default"
        android:contentInsetEnd="@dimen/margin_padding_default"
        android:background="@color/blue">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/img_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tab_name_urgent"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_title"/>

        <ImageView
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh"
            android:layout_gravity="end"
            android:clickable="true"/>
    </Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/llUrgent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_padding_smallest"
                android:paddingHorizontal="@dimen/margin_padding_default"
                android:paddingVertical="@dimen/margin_padding_small"
                android:background="@color/light_grey">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/margin_padding_smallest"
                    android:text="@string/no_action_report"
                    android:textColor="@color/text_sub"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtReportCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="count"
                    android:textColor="@color/red"
                    android:textStyle="bold"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_padding_small"
                android:paddingHorizontal="@dimen/margin_padding_default"
                android:paddingVertical="@dimen/margin_padding_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/margin_padding_smallest"
                    android:text="@string/working"
                    android:textColor="@color/text_sub"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtWorkingCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="count"
                    android:textColor="@color/blue"
                    android:textStyle="bold"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvWorking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pgbSearchRoute"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:indicatorColor="@color/grey"
            app:trackColor="@color/light_grey"
            android:indeterminate="true" />

        <LinearLayout
            android:id="@+id/llTimeout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeout_message"
                android:textColor="@color/grey"/>

            <ImageButton
                android:id="@+id/btnTimeoutRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_default"
                android:src="@drawable/ic_request"
                android:background="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llServiceError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_error_message"
                android:textColor="@color/grey" />

            <ImageButton
                android:id="@+id/btnServiceErrorRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_default"
                android:src="@drawable/ic_request"
                android:background="@color/white"/>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>